fix all the bugs with aligns on responsive

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,10 +1,23 @@
 * {
+    
     box-sizing: border-box;
     font-family: 'Titillium Web', 'Ariel', sans-serif;
 }
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+ul li {
+    list-style-type: none;
+}
+
 /* ---- Navigation ---- */
 
 body {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -52,7 +65,7 @@ body {
 .logo {
     font-weight: 700;
     font-size: 1.65em;
-    margin: 0 10px;
+    margin: 10px;
     display:inline;
     color: #fff;
     opacity: .75;
@@ -61,6 +74,17 @@ body {
 
 .nav {
 	margin-top: 5px;
+}
+
+.header .nav {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    align-items: center;
+}
+
+.header .navg li {
+    list-style-type: none;
 }
 
 .nav a {
@@ -78,6 +102,7 @@ body {
     border: white 1px solid;
     margin:0 15px;
     transition: transform .2s;
+    vertical-align: middle;
 }
 .profile_pic:hover {
     transform: scale(1.1);
@@ -177,9 +202,39 @@ footer a {
 }
 
 
-@media (max-width: 768px) {
+
+
+@media (min-width: 767px) and (max-width:1024px){
+
+    .header {
+        height: 111.4px;
+        flex-direction: column;
+    }
+    .nav {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+      
+    }
+    .cover {
+        margin-top:70px;
+    }
+}
+
+@media (max-width: 767px) {
+    .header .nav {
+        margin-bottom: 10px;
+        width: 100%;
+        flex-grow: 1
+    }
+
+    .header .nav li {
+        text-align: center;
+        width:100%;
+    }
 
     .cover {
+        width: 100%;
         margin-top:220px;
     }
     .prim_container {
@@ -203,15 +258,3 @@ footer a {
 
 }
 
-@media (min-width: 768px) and (max-width:1024px){
-
-    .header {flex-direction: column;}
-    .nav {
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
-    }
-    .cover {
-        margin-top:70px;
-    }
-}
