--- a/css/float.css
+++ b/css/float.css
@@ -4,7 +4,18 @@
 }
 
 
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+ul li {
+    list-style-type: none;
+}
+
 html, body {
+    margin: 0;
+    padding: 0;
     height: 100%;
 }
 
@@ -13,7 +24,7 @@ html, body {
     position: fixed;
     width: 100%;
     background: linear-gradient(to left, #b10d28 0%, #ed1a3b 51%, #f58220 100%);
-    min-height: 55px;
+    height: 60px;
     color: #fff;
 }
 
@@ -51,6 +62,13 @@ html, body {
 .nav {
 	margin-top: 5px;
 }
+
+
+.header .nav {
+    padding: 0 20px;
+}
+
+
 
 .nav a {
 	text-align: center;
@@ -145,17 +163,17 @@ html, body {
 
 .tertiary article {
     float: left;
-    width: 30%;
+    width: 31%;
     margin: 0 1%;
+}
+.tertiary:nth-child(2) {
+    width: 33%; 
 }
 
 .tertiary h3 {
     text-align: center;
 }
 
-.tertiary :nth-child(2) {
-
-}
 .tertiary img {
     width:100%
 }
@@ -195,9 +213,10 @@ footer a {
   }
 
 
-  @media (min-width: 768px) and (max-width:1024px){
+  @media (min-width: 767px) and (max-width:1024px){
 
     .header {
+        height: 111.4px;
         float: none;
         text-align: center;
     }
@@ -216,15 +235,19 @@ footer a {
     }
     
     .cover {
-        margin-top:98px;;
+        margin-top:98px;
     }
+
+
+    
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
 
     
     .header {
+        height: 284.2px;
         float: none;
         text-align: center;
     } 
@@ -243,8 +266,9 @@ footer a {
         display: inline-block; 
     }
 
-    .cover {
-        margin-top:245px;
+    .cover {       
+        width: 100%;
+        margin-top: 245px;
     }
     .prim_container {
         float:none;
@@ -259,6 +283,7 @@ footer a {
         width: 100%;
     }
     .tertiary article{
+        margin: 0;
         width: 100%;
     }
 
